--- a/SDL_SwapFloatLE.mediawiki
+++ b/SDL_SwapFloatLE.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_SwapFloatLE =
-Use this function to swap the byte order of a little endian floating point value to native ordering.
+Use this function to swap the byte order of a little-endian floating point value to native ordering.
 
 
 == Syntax ==
