--- a/SDL_AudioSpec.mediawiki
+++ b/SDL_AudioSpec.mediawiki
@@ -42,7 +42,17 @@ A structure that contains the audio output format. It also contains a callback t
 
 == Code Examples ==
 ```c++
-You can add your code example here
+{{{#!highlight cpp
+SDL_AudioSpec want, have;
+SDL_AudioDeviceID dev;
+
+SDL_zero(want);
+want.freq = 48000;
+want.format = AUDIO_F32;
+want.channels = 2;
+want.samples = 4096;
+want.callback = MyAudioCallback;  // you wrote this function elsewhere.
+dev = SDL_OpenAudioDevice(NULL, 0, &want, &have, SDL_AUDIO_ALLOW_FORMAT_CHANGE);
 ```
 
 == Remarks ==
