--- a/SDL_OpenAudioDevice.mediawiki
+++ b/SDL_OpenAudioDevice.mediawiki
@@ -86,6 +86,11 @@ For example, if you ask for float32 audio format, but the sound card only suppor
 
 If your application can only handle one specific data format, pass a zero for '''allowed_changes''' and let SDL transparently handle any differences.
 
+An opened audio device starts out paused, and should be enabled for playing by calling [[SDL_PauseAudioDevice]](devid, 0) when you are ready for your audio callback function to be called.  Since the audio driver may modify the requested size of the audio buffer, you should allocate any local mixing buffers after you open the audio device.
+
+The audio callback runs in a separate thread in most cases; you can prevent race conditions between your callback and other threads without fully pausing playback with [[SDL_LockAudioDevice]]().
+
+
 == Related Functions ==
 :[[SDL_CloseAudioDevice]]
 :[[SDL_GetAudioDeviceName]]
