--- a/SDL_UnlockAudio.mediawiki
+++ b/SDL_UnlockAudio.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_UnlockAudio =
-Use this function to unlock the audio callback function.
+This function is a legacy means of unlocking the audio device. New programs might want to use [[SDL_UnlockAudioDevice]]() instead.
 
 
 == Syntax ==
@@ -12,19 +12,34 @@ void SDL_UnlockAudio(void)
 
 == Code Examples ==
 ```c++
-You can add your code example here
+void myAudioCallback(void *userdata, Uint8* stream, int len)
+{
+    printf("The audio callback is running!\n");
+    SDL_memset(stream, 0, len);  // just silence.
+    printf("The audio callback is done!\n");
+}
+
+// don't lock for 2 seconds at a time in real life, please.
+SDL_Delay(2000);  // callback runs for 2 seconds.
+SDL_LockAudio();
+printf("The audio callback can't be running right now!\n");
+SDL_Delay(2000);  // callback doesn't run for 2 seconds.
+printf("Ok, unlocking!\n");
+SDL_UnlockAudio();
+SDL_Delay(2000);  // callback runs for 2 seconds.
 ```
 
 == Remarks ==
-Unlocks a previous [[SDL_LockAudio]]() call. 
+This function is equivalent to calling
 
-The lock manipulated by these functions protects the callback function.  During a [[SDL_LockAudio]]()/[[SDL_UnlockAudio]]() pair, you can be guaranteed that the callback function for the default audio device is not running.  Use [[SDL_LockAudioDevice]]()/[[SDL_UnlockAudioDevice]]() if you need to lock a different audio device.  [[SDL_UnlockAudio]]() is equivalent to [[SDL_UnlockAudioDevice]](1).
+```c++
+SDL_UnlockAudioDevice(1);
+```
 
-Do not call these from the callback function or you will cause deadlock.
+and is only useful if you used the legacy [[SDL_OpenAudio]]() function.
 
 == Related Functions ==
 :[[SDL_LockAudio]]
-:[[SDL_LockAudioDevice]]
 :[[SDL_UnlockAudioDevice]]
 
 ----
