--- a/SDL_PauseAudio.mediawiki
+++ b/SDL_PauseAudio.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_PauseAudio =
-Use this function to pause and unpause audio playback for the default audio device.
+This function is a legacy means of unlocking the audio device. New programs might want to use [[SDL_UnlockAudioDevice]]() instead.
 
 
 == Syntax ==
@@ -20,17 +19,22 @@ void SDL_PauseAudio(int pause_on)
 
 == Code Examples ==
 ```c++
-You can add your code example here
+SDL_PauseAudio(1);  // audio callback is stopped when this returns.
+SDL_Delay(5000);  // audio device plays silence for 5 seconds
+SDL_PauseAudio(0);  // audio callback starts running again.
 ```
 
 == Remarks ==
-This function pauses and unpauses the audio callback processing for the default audio device. It should be called with '''pause_on'''=0 after opening the default audio device to start playing sound. This is so you can safely initialize data for your callback function after opening the audio device. Silence will be written to the audio device during the pause.
+This function is equivalent to calling
 
-Use [[SDL_PauseAudioDevice]] to pause a non-default audio device.  [[SDL_PauseAudio]]('''pause_on''') is equivalent to [[SDL_PauseAudioDevice]](1, '''pause_on''').
+```c++
+SDL_PauseAudioDevice(1, pause_on);
+```
+
+and is only useful if you used the legacy [[SDL_OpenAudio]]() function.
 
 == Related Functions ==
-:[[SDL_GetAudioStatus]] *
-:[[SDL_OpenAudio]] *
+:[[SDL_GetAudioStatus]]
 :[[SDL_PauseAudioDevice]]
 
 ----
