--- a/CategorySharedObject.mediawiki
+++ b/CategorySharedObject.mediawiki
@@ -10,13 +10,7 @@
 
 == Introduction ==
 
-This category contains functions for handling shared objects and additional functions.
-
-There are some system dependent library loading routines.
-: Things to keep in mind:
-* These functions only work on C function names.  Other languages may have name mangling and intrinsic language support that varies from compiler to compiler.
-* Make sure you declare your function pointers with the same calling convention as the actual library function.  Your code will crash mysteriously if you do not do this.
-* Avoid namespace collisions.  If you load a symbol from the library, it is not defined as to whether it goes into the global symbol namespace for the application or not.  If it does and it conflicts with symbols in your code or other shared libraries, you will not get the results you expect.
+This category contains functions for handling shared objects.
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Enumerations == -->
