--- a/SDL_MixAudioFormat.mediawiki
+++ b/SDL_MixAudioFormat.mediawiki
@@ -23,10 +23,10 @@ void SDL_MixAudioFormat(Uint8*          dst,
 |the source audio buffer to be mixed
 |-
 |'''format'''
-|the specified audio format; see [[SDL_AudioFormat]] for more information ''-or-'' the [[SDL_AudioFormat]] structure representing the desired audio format
+|the [[SDL_AudioFormat]] structure representing the desired audio format
 |-
 |'''len'''
-|,,defines ,,the length of the audio buffer in bytes
+|the length of the audio buffer in bytes
 |-
 |'''volume'''
 |ranges from 0 - 128, and should be set to SDL_MIX_MAXVOLUME for full audio volume
@@ -38,10 +38,13 @@ You can add your code example here
 ```
 
 == Remarks ==
-This works like [[SDL_MixAudio]](), but you specify the audio format instead of using the format of the default audio device. Thus it can be used when no audio device is open at all.
+This takes an audio buffer '''src''' of '''len''' bytes of '''format''' data and mixes it into '''dst''', performing addition, volume adjustment, and overflow clipping. The buffer pointed to by '''dst''' must also be '''len''' bytes of '''format''' data.
 
-== Related Functions ==
-:[[SDL_MixAudio]]
+This is provided for convenience -- you can mix your own audio data.
+
+Do not use this function for mixing together more than two streams of sample data. The output from repeated application of this function may be distorted by clipping, because there is no accumulator with greater range than the input (not to mention this being an inefficient way of doing it). Use mixing functions from SDL_mixer, OpenAL, or write your own mixer instead.
+
+It is a common misconception that this function is required to write audio data to an output stream in an audio callback.  While you can do that, [[SDL_MixAudioFormat]]() is really only needed when you're mixing a single audio stream with a volume adjustment.
 
 ----
 [[CategoryAPI]], [[CategoryAudio]]
