--- a/SDL_MixAudio.mediawiki
+++ b/SDL_MixAudio.mediawiki
@@ -31,48 +31,13 @@ void SDL_MixAudio(Uint8*       dst,
 
 == Code Examples ==
 ```c++
-static Uint8 *audio_chunk;
-static Uint32 audio_len;
-static Uint8 *audio_pos;
-
-/* The audio function callback takes the following parameters:
-   stream:  A pointer to the audio buffer to be filled
-   len:     The length (in bytes) of the audio buffer
-*/
-void fill_audio(void *udata, Uint8 *stream, int len)
+void myAudioCallback(void *udata, Uint8 *stream, int len)
 {
-/* Only play if we have data left */
-    if ( audio_len == 0 )
-        return;
-
-/* Empty any old data in the buffer */
-    SDL_memset(stream, 0, len);
-
-/* Mix as much data as possible */
-    len = ( len > audio_len ? audio_len : len );
-    SDL_MixAudio(stream, audio_pos, len, SDL_MIX_MAXVOLUME);
-    audio_pos += len;
-    audio_len -= len;
+    extern const Uint8 *mixData;
+    SDL_memset(stream, 0, len);  // make sure this is silence.
+    // mix our audio against the silence, at 50% volume.
+    SDL_MixAudio(stream, mixData, len, SDL_MIX_MAXVOLUME / 2);
 }
-
-/* Load the audio data ... */
-
-;;;;;
-
-audio_pos = audio_chunk;
-
-/* Let the callback function play the audio chunk */
-SDL_PauseAudio(0);
-
-/* Do some processing */
-
-;;;;;
-
-/* Wait for sound to complete */
-while ( audio_len > 0 ) {
-    SDL_Delay(100);         /* Sleep 1/10 second */
-}
-SDL_CloseAudio();
 ```
 
 == Remarks ==
