--- a/SDL_AudioCVT.mediawiki
+++ b/SDL_AudioCVT.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_AudioCVT =
 A structure that contains audio data conversion information.
@@ -55,21 +54,27 @@ A structure that contains audio data conversion information.
 
 == Code Examples ==
 ```c++
-You can add your code example here
+// Change 1024 stereo sample frames at 48000Hz from Float32 to Int16.
+SDL_AudioCVT cvt;
+SDL_BuildAudioCVT(&cvt, AUDIO_F32, 2, 48000, AUDIO_S16, 2, 48000);
+SDL_assert(cvt.needed); // obviously, this one is always needed.
+cvt.len = 1024 * 2 * 4;  // 1024 stereo float32 sample frames.
+cvt.buf = (Uint8 *) SDL_malloc(cvt.len * cvt.len_mult);
+// read your float32 data into cvt.buf here.
+SDL_ConvertAudio(cvt);
+// cvt.buf has cvt.len_cvt bytes of converted data now.
 ```
 
 == Remarks ==
-*<br/>The [[SDL_AudioCVT]] is used to convert audio data between different formats. An [[SDL_AudioCVT]] structure is created with the [[SDL_BuildAudioCVT]]() function, while the actual conversion is done by the [[SDL_ConvertAudio]]() function.
+The [[SDL_AudioCVT]] structure is used to convert audio data between different formats. An [[SDL_AudioCVT]] structure is initialized with the [[SDL_BuildAudioCVT]]() function, while the actual conversion is done by the [[SDL_ConvertAudio]]() function, once the application has set up appropriately-sized buffers between these two function calls.
 
-Many of the fields in the [[SDL_AudioCVT]] structure should be considered private and their function will not be discussed here. 
-
-<span id="buf"></span>'''buf''' points to the audio data that will be used in the conversion. It is both the source and the destination, which means the converted audio data overwrites the original data. It also means that the converted data may be larger than the original data (if you were converting from 8-bit to 16-bit, for instance), so you must ensure '''buf''' is large enough. See '''len_mult''' below for more info.
+<span id="buf"></span>'''buf''' points to the audio data that will be used in the conversion. It is both the source and the destination, which means the converted audio data overwrites the original data. It also means that the converted data may be larger than the original data (if you were converting from 8-bit to 16-bit, for instance), so you must ensure '''buf''' is large enough for any stage of the conversion, regardless of the final converted data's size. See '''len_mult''' below for more info.
 
 <span id="len"></span>'''len''' is the length of the original audio data in bytes. 
 
-<span id="len_mult"></span>'''len_mult''' ^is the length multiplier for determining the size of the converted data.^  As explained above, the audio buffer needs to be big enough to store the converted data, which may be bigger than the original audio data. The ^size^ ,,length,, of '''buf''' should be '''len'''*'''len_mult'''.
+<span id="len_mult"></span>'''len_mult''' is the length multiplier for determining the size of the converted data. The audio buffer may need to be larger than either the original data or the converted data.. The allocated size of '''buf''' should be '''len'''*'''len_mult'''.
 
-<span id="len_ratio"></span>'''len_ratio''' ^is the length ratio of the converted data to the original data.^ When you have finished converting your audio data, you need to know how much of your audio buffer is valid. '''len'''*'''len_ratio''' is the size of the converted audio data in bytes. This is very similar to '''len_mult''', however when the convert^ed^ audio data is shorter than the original, '''len_mult''' would be 1. '''len_ratio''', on the other hand, would be a fractional number between 0 and 1. <br/>*
+<span id="len_ratio"></span>'''len_ratio''' is the length ratio of the converted data to the original data. When you have finished converting your audio data, you need to know how much of your audio buffer is valid. '''len'''*'''len_ratio''' is the size of the converted audio data in bytes. This is very similar to '''len_mult''', however when the converted audio data is shorter than the original, '''len_mult''' would be 1. '''len_ratio''', on the other hand, would be a fractional number between 0 and 1.
 
 == Related Functions ==
 :[[SDL_BuildAudioCVT]]
