--- a/SDL_CloseAudioDevice.mediawiki
+++ b/SDL_CloseAudioDevice.mediawiki
@@ -16,15 +16,21 @@ void SDL_CloseAudioDevice(SDL_AudioDeviceID dev)
 |an audio device previously opened with [[SDL_OpenAudioDevice]]()
 |}
 
-<<Color2(green,Should SDL_Audio<code></code>DeviceID be specifically mentioned like a struct would be although it is a typedef? It has no page.)>>
-
 == Code Examples ==
 ```c++
-You can add your code example here
+extern SDL_AudioSpec want;
+SDL_AudioDeviceID devid = SDL_OpenAudioDevice(NULL, 0, &want, NULL, 0);
+if (devid > 0) {
+    SDL_PauseAudioDevice(devid, 0);
+    SDL_Delay(5000);  // let audio callback run for 5 seconds.
+    SDL_CloseAudioDevice(devid);
+}
 ```
 
 == Remarks ==
-''You can add useful comments here''
+The application should close open audio devices once they are no longer needed. Calling this function will wait until the device's audio callback is not running, release the audio hardware and then clean up internal state. No further audio will play from this device once this function returns.
+
+The device ID is invalid as soon as the device is closed, and is eligible for reuse in a new [[SDL_OpenAudioDevice]]() call immediately.
 
 == Related Functions ==
 :[[SDL_OpenAudioDevice]]
