--- a/SDL_AudioFormat.mediawiki
+++ b/SDL_AudioFormat.mediawiki
@@ -129,6 +129,13 @@ Unspecified bits are always zero, but may be used in later versions of SDL.  The
 
 == Code Examples ==
 ```c++
+extern SDL_AudioFormat fmt;
+if (SDL_AUDIO_ISFLOAT(fmt)) {
+    printf("floating point data\n");
+} else {
+    printf("integer data\n");
+}
+printf("%d bits per sample\n", (int) SDL_AUDIO_BITSIZE(fmt));
 ```
 
 == Remarks ==
