--- a/SDL_AudioStatus.mediawiki
+++ b/SDL_AudioStatus.mediawiki
@@ -46,7 +46,7 @@ if (dev != 0)
 ```
 
 == Remarks ==
-Opened devices are always PLAYING or PAUSED in normal circumstances. A failing device may change its status to STOPPED at any time, and closing a device will progress to STOPPED, too. Asking for the state on an unopened device ID will report STOPPED.
+Opened devices are always PLAYING or PAUSED in normal circumstances. A failing device may change its status to STOPPED at any time, and closing a device will progress to STOPPED, too. Asking for the state on an unopened or unknown device ID will report STOPPED.
 
 == Related Functions ==
 :[[SDL_GetAudioDeviceStatus]]
